--- a/JEE6/de.itemis.jee6.website/website/community.html
+++ b/JEE6/de.itemis.jee6.website/website/community.html
@@ -58,7 +58,6 @@
 						<li ><a href="features.html">Features</a></li>
 						<li ><a href="aboutus.html">Über uns</a></li>
 						<li ><a href="documentation.html">Dokumentation</a></li>
-						<li class="active"><a href="community.html">Community</a></li>
 						<li ><a href="download.html">Download</a></li>
 					</ul>
 				</nav>
@@ -66,17 +65,19 @@
 			<div id="slogan">
 				<div class="sloganCentering">
 					<h2>
-						<strong>Was ist der JEE Generator?</strong>
-						Der JEE-6Generator ist in der Lage, eine komplette JEE-Web-Applikation aus einem einfachen Modell zu generieren.
+						<strong>Was ist der JEE-Generator?</strong>
+						Der JEE-Generator ist in der Lage, eine komplette JEE-Web-Applikation aus einem einfachen Modell zu generieren.
 						Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfügbar. 
 					</h2>
 				</div>
 			</div>
 		</header>
-		<div id="main" role="main">
-			<div id="maincontainer" class="clearfix centering">
-				<h2>Community</h2>
-				<div class="box introduction">
+		<div id="header_wrapper" class="container" >
+		</div>
+			<div id="page">
+				<div id="team" class="container clearfix"> 
+					<h2>Community</h2>
+			        <hr>
 					<div class="row">
 						<div class="span1">&nbsp;</div>
 						<div class="span9 team">
@@ -89,7 +90,7 @@
 						    <h3>Bug gefunden?</h3>
 						 	</div>
 							<div class="span6 ">
-								Du hast einen Bug gefunden oder einen Verbesserungsvorschlag? Sende uns ein Mail an <strong>jee6-generator@itemis.de</strong>
+								Du hast einen Bug gefunden oder einen Verbesserungsvorschlag? Sende uns ein Mail an <strong>info@jee-generator.de</strong>
 							</div>
 							</div>
 						</div>
@@ -102,10 +103,8 @@
 		<div class="centering">
 			<nav>
 				<ul>
-					<li><a href="http://www.yakindu.de/traceability/kontakt/">Kontakt</a></li>
-					<li><a href="http://www.yakindu.de/traceability/data-protection.html">Datenschutz</a></li>
-					<li><a href="http://www.yakindu.de/traceability/terms-and-conditions.html">AGB</a></li>
-					<li><a href="http://www.yakindu.de/traceability/legal-notice.html">Impressum</a></li>
+					<li><a href="kontakt.html">Kontakt</a></li>
+					<li><a href="legal-notice.html">Impressum</a></li>
 				</ul>
 			</nav>
 	
