--- a/JEE6/de.itemis.jee6.website/website/download.html
+++ b/JEE6/de.itemis.jee6.website/website/download.html
@@ -47,8 +47,8 @@
 			<div id="slogan">
 				<div class="sloganCentering">
 					<h2>
-						<strong>Was ist der JEE Generator?</strong>
-						Der JEE-6Generator ist in der Lage, eine komplette JEE-Web-Applikation aus einem einfachen Modell zu generieren.
+						<strong>Was ist der JEE-Generator?</strong>
+						Der JEE-Generator ist in der Lage, eine komplette JEE-Web-Applikation aus einem einfachen Modell zu generieren.
 						Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfügbar. 
 					</h2>
 				</div>
@@ -60,38 +60,38 @@
 				<div class="box introduction">
 						<!--table one starts-->
 						<div class="span1">&nbsp;</div>
-					    <div class="span4">
+						<div class="span4">
 							<div class="pricing">
-							    <table>
+								<table>
 									<tfoot>
-									    <tr>
+										<tr>
 											<td></td>
-									    </tr>
+										</tr>
 									</tfoot>
 									<tbody>
-								    <tr>
+									<tr>
 										<td class="focus">Update Sites <span>Nutze den Eclipse Update Manager</span></td>
-								    </tr>
-								    <tr>
-								    	<td style="text-align: center;">
-								    	<a
-								    	rel="popover"
-								    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
-								    	data-original-title="Right-click and 'Copy Link'"
-								    	href="http://jee6-generator.itemis.de/updates/kepler/"
-								    	class="has-popover btn btn-primary btn-large"
-								    	style="width: 70%;">Kepler</a></td>
-								    </tr>
-								    <tr>
+									</tr>
+									<tr>
+										<td style="text-align: center;">
+										<a
+										rel="popover"
+										data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
+										data-original-title="Right-click and 'Copy Link'"
+										href="http://jee6-generator.itemis.de/updates/kepler/"
+										class="has-popover btn btn-primary btn-large"
+										style="width: 70%;">Kepler</a></td>
+									</tr>
+									<tr>
 										<td style="text-align: center;">
 										<a
 										  rel="popover"
-								    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
-								    	data-original-title="Right-click and 'Copy Link'"
+										data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
+										data-original-title="Right-click and 'Copy Link'"
 										  href="http://jee6-generator.itemis.de/updates/snapshot/"
-								    	class="has-popover btn btn-primary btn-large"
-								    	style="width: 70%;">Snapshot</a></td>
-								    </tr>
+										class="has-popover btn btn-primary btn-large"
+										style="width: 70%;">Snapshot</a></td>
+									</tr>
 								</tbody>
 							    </table>
 							</div>
@@ -138,67 +138,67 @@
 									</tbody>
 							    </table>
 							</div>
-					    </div>
+						</div>
 						<div class="span1">&nbsp;</div>
 					</div>
-					    <div class="container">
-									<div class="container">
-					<h2>Installation Instructions</h2>
-					<hr>
+					 	<div class="container">
+							<div class="container">
+							<h2>Installation Instructions</h2>
+							<hr/>
 					<div class="span1">&nbsp;</div>
 					  <div class="span9">
 					    <p>
-					      <strong>  The JEE6 Generator is implemented in Java, so you must have a
+					      <strong>  Der JEE-Generator ist in Java implementiert, daher muss die
 					        <a href="http://www.oracle.com/technetwork/java/index.html">Java
-					        Runtime Environment</a> installed in order to proceed.
+					        Runtime Environment</a> installiert sein.
 					      </strong>
 					    </p>
-					    <p>
-					      There are two easy ways to get the JEE6 Generator up and running. A pre-configured Eclipse distribution is available
-					      which has already all the necessary plug-ins installed. Alternatively, you can install the JEE6 Generator into your
-					      existing Eclipse by means of the Eclipse update mechanism.
-					    </p>
-					    <!--  section -->
-					    <section id="InstallDistro" style="padding-top: 68px; margin-top: -68px;">
-					    <h2>  Install Pre-Configured Eclipse
-					    </h2>
-					      <ol>
-					        <li>Download the distribution from above that matches your OS.</li>
-					        <li>Unzip the archive into the directory of your choice.
-									<strong>  Windows Users should choose a directory close to the root since the zip contains a
-									deeply nested folder structure. The maximum path length on windows may not exceed 256 characters.
+						<p>
+							Es gibt zwei einfache Wege, den JEE-Generator ans Laufen zu bringen. Eine vorkonfigurierte Eclipse-Distribution
+							ist bereits mit allen notwendigen Plugins vorinstalliert verfügbar. Alternativ kann über eine Update Site
+							ein Eclipse mit allen notwendigen Plugins nachinstalliert werden.
+						</p>
+						<!--  section -->
+						<section id="InstallDistro" style="padding-top: 68px; margin-top: -68px;">
+							<h2>  Installiere vorkonfiguriertes Eclipse</h2>
+							<ol>
+								<li>Download die Distribution zum passenden Betriebssystem.</li>
+								<li>Das Archiv muss im Verzeichnis der Wahl ausgepackt werden
+									<strong>Windows Benutzer sollten ein Verzeichnis möglichst in der Nähe des Wurzelverzeichnisses wählen,
+									da Windows nur komplette Pfade mit maximal 256 Zeichen akzeptiert und Eclipse eine tiefe
+									Verzeichnisstruktur benutzt.
 									</strong>
-					        </li>
-					        <li>Launch Eclipse and select the workspace location. A workspace location is the directory for your user data
-									    and project files.
-					        </li>
-					      </ol>
-					    </section>
-					    <!--  section -->
-					    <section style="padding-top: 68px; margin-top: -68px;">
-					    <h2>  Install the JEE6 Generator from Update Site
-					    </h2>
-					    <p>
-					      If you have an Eclipse running :
-					    </p>
-					      <ul>
-					        <li>
-									    Choose
+								</li>
+								<li>
+									Danach kann Eclipse gestartet werden und der gewünschte Workspace ausgewählt werden. Ein Workspace
+									ist das Verzeichnis für die Benutzerdaten und Projektdateien.
+								</li>
+							</ol>
+						</section>
+						<!--  section -->
+						<section style="padding-top: 68px; margin-top: -68px;">
+							<h2>  JEE-Generator von der Update Site installieren  </h2>
+							<p>
+								Wenn Eclipse läuft:
+							</p>
+							<ul>
+								<li>
+									Wähle
 									<strong>  Help -&gt; Install New Software...
-									</strong> from the menu bar and
+									</strong> aus der Menüleiste und
 									<strong>  Add...
-									</strong> Insert one of the update site URLs from above.
-									    This site aggregates all the necessary and optional components and dependencies of the JEE6 Generator.
-					        </li>
-					        <li>Select the <i>JEE6 DSL</i> from the category <i>JEE6-Generator</i> and
-					        complete the wizard by clicking the <i>Next</i> button until you can click <i>Finish</i>.
-					        </li>
-					        <li>
-									    After a quick download and a restart of Eclipse, the JEE6 Generator is ready to use.
-					        </li>
-					      </ul>
-					    </section>
-					  </div>
+									</strong> Geben Sie eine der Update Site URLs von oben an.
+										Diese Site fasst alle benötigten Komponenten und Abhängigkeiten für den JEE-Generator zusammen.
+								</li>
+								<li>Wähle <i>JEE-Generator</i> aus der Kategorie <i>JEE-Generator</i> und durch wiederholtes Klicken von
+									<i>Next</i> und einem abschließenden <i>Finish</i> wird die Installation abgeschlossen.
+								</li>
+								<li>
+									Nach einem kurzen Download steht der JEE-Generator zum Gebrauch zur Verfügung.
+								</li>
+							</ul>
+						</section>
+						</div>
 					<div class="span1">&nbsp;</div>
 					</div>
 					<div class="container">
