--- a/JEE6/de.itemis.jee6.website/website/community.html
+++ b/JEE6/de.itemis.jee6.website/website/community.html
@@ -56,7 +56,7 @@
 				<nav class="menu">
 					<ul>
 						<li ><a href="features.html">Features</a></li>
-						<li ><a href="aboutus.html">Über uns</a></li>
+						<li ><a href="aboutus.html">Ãber uns</a></li>
 						<li ><a href="documentation.html">Dokumentation</a></li>
 						<li ><a href="download.html">Download</a></li>
 					</ul>
@@ -67,7 +67,7 @@
 					<h2>
 						<strong>Was ist der JEE-Generator?</strong>
 						Der JEE-Generator ist in der Lage, eine komplette JEE-Web-Applikation aus einem einfachen Modell zu generieren.
-						Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfügbar. 
+						Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfÃŒgbar. 
 					</h2>
 				</div>
 			</div>
