--- a/JEE6/de.itemis.jee6.website/website/community.html
+++ b/JEE6/de.itemis.jee6.website/website/community.html
@@ -18,31 +18,12 @@
 	<!--[if lt IE 9]>
 	<link href="css/iebugs.css" rel="stylesheet" type='text/css'>
 	<![endif]-->
-	<script src="js/twitter.js" type="text/javascript"></script>
-	<script src="js/jquery-1.7.1.min.js"></script>
+	<!--[if lte IE 7]><link rel="stylesheet" href="css/iehacks.css" /><![endif]-->
+	
+	<!--[if lt IE 9]><script src="js/libs/html5shiv.js"></script><![endif]-->
+	<script src="js/libs/jquery-1.7.1.min.js"></script>
+	<script src="js/libs/modernizr-2.5.3.min.js"></script>
 	<script src="js/jquery.prettyPhoto.js" type="text/javascript"></script>
-		<script type="text/javascript">
-	     $(document).ready(function() {
-			$('a[data-rel]').each(function() {
-				$(this).attr('rel', $(this).data('rel'));
-			});
-			
-			$("a[rel^='prettyPhoto']").prettyPhoto({
-				animation_speed: 'fast',
-				slideshow: 5000,
-				autoplay_slideshow: false,
-				opacity: 0.80,
-				show_title: true,
-				theme: 'ligh_square',
-				overlay_gallery: false,
-				social_tools: false
-			});
-			$('#nav-outline > li > a').live('click', function() {        
-				$(this).parent().find('ul').slideToggle();      
-			});
-			$('.has-popover').popover();
-	     });
-		</script>
 </head>
 <body class="home">
 	<div id="wrap">
@@ -55,8 +36,9 @@
 				</div>
 				<nav class="menu">
 					<ul>
+						<li ><a href="index.html">Startseite</a></li>
 						<li ><a href="features.html">Features</a></li>
-						<li ><a href="aboutus.html">Ãber uns</a></li>
+						<li ><a href="aboutus.html">Über uns</a></li>
 						<li ><a href="documentation.html">Dokumentation</a></li>
 						<li ><a href="download.html">Download</a></li>
 					</ul>
@@ -67,7 +49,7 @@
 					<h2>
 						<strong>Was ist der JEE-Generator?</strong>
 						Der JEE-Generator ist in der Lage, eine komplette JEE-Web-Applikation aus einem einfachen Modell zu generieren.
-						Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfÃŒgbar. 
+						Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfügbar. 
 					</h2>
 				</div>
 			</div>
@@ -117,26 +99,16 @@
 			</div>
 		</div>
 	</footer>
-	<!-- Le javascript
-	    ================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="js/script.js"></script>
 	
-	<script src="js/bootstrap-transition.js"></script>
-	<script src="js/bootstrap-alert.js"></script>
-	<script src="js/bootstrap-modal.js"></script>
-	<script src="js/bootstrap-dropdown.js"></script>
-	<script src="js/bootstrap-scrollspy.js"></script>
-	<script src="js/bootstrap-tab.js"></script>
-	<script src="js/bootstrap-tooltip.js"></script>
-	<script src="js/bootstrap-popover.js"></script>
-	<script src="js/bootstrap-button.js"></script>
-	<script src="js/bootstrap-collapse.js"></script>
-	<script src="js/bootstrap-carousel.js"></script>
-	<script src="js/bootstrap-typeahead.js"></script>
-	
-	
-	<!-- Include the plug-in -->
-	<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-	<script src="js/custom.js" type="text/javascript"></script>
+	<script>
+		$(document).ready(function(){
+			$("a[rel^='prettyPhoto']").prettyPhoto({
+				social_tools: '',
+				default_width: 750,
+				default_height: 516
+			});
+		});
+	</script>
 </body>
 </html>
