--- a/JEE6/de.itemis.jee6.website/website/index.html
+++ b/JEE6/de.itemis.jee6.website/website/index.html
@@ -83,11 +83,11 @@
 			</nav>
 	
 			<div class="logo">
-				<a href="http://www.itemis.de/"><img src="http://www.yakindu.com/resources/img/itemis_logo.png" alt="itemis" /></a>
+				<a href="http://www.itemis.de/"><img src="images/itemis_logo.png" alt="itemis" /></a>
 			</div>
 			<p>Copyright &copy; 2012&ndash;2014 <a href="http://www.itemis.de/">itemis AG</a>. Alle Rechte vorbehalten.</p>
 			<div class="powered">
-				Powered by: <a href="http://www.itemis.de/itemis-ag/services-und-loesungen/language=de/27261/eclipse-modeling"><img class="img-eclipse" src="http://www.yakindu.com/resources/img/eclipse_logo.jpg" alt="eclipse" /></a><a href="http://www.eclipse.org/Xtext/"><img src="http://www.yakindu.com/resources/img/xtext_logo.png" alt="xtext" /></a>
+				Powered by: <a href="http://www.itemis.de/itemis-ag/services-und-loesungen/language=de/27261/eclipse-modeling"><img class="img-eclipse" src="images/eclipse_logo.jpg" alt="eclipse" /></a><a href="http://www.eclipse.org/Xtext/"><img src="images/xtext_logo.png" alt="xtext" /></a>
 			</div>
 		</div>
 	</footer>
