--- a/JEE6/de.itemis.jee6.website/website/download.html
+++ b/JEE6/de.itemis.jee6.website/website/download.html
@@ -25,7 +25,7 @@
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
 	<script src="js/jquery.prettyPhoto.js" type="text/javascript"></script>
 </head>
-<body class="home">
+<body class="">
 	<div id="wrap">
 		<header>
 			<div class="centering">
@@ -58,10 +58,9 @@
 			<div id="maincontainer" class="clearfix centering">
 				<h2>Downloads</h2>
 				<div class="box introduction">
-						<!--table one starts-->
-						<div class="span1">&nbsp;</div>
+					<div class="clearfix">
 						<div class="span4">
-							<div class="pricing">
+							<div class="pricing left">
 								<table>
 									<tfoot>
 										<tr>
@@ -96,9 +95,8 @@
 							    </table>
 							</div>
 					    </div>
-					    <div class="span1">&nbsp;</div>
 					    <div class="span4">
-							<div class="pricing">
+							<div class="pricing right">
 							    <table>
 									<tfoot>
 									    <tr>
@@ -139,12 +137,11 @@
 							    </table>
 							</div>
 						</div>
-						<div class="span1">&nbsp;</div>
 					</div>
-					 	<div class="container">
-							<div class="container">
-							<h2>Installation Instructions</h2>
-							<hr/>
+				</div>
+					<div class="container">
+					<h2>Installation Instructions</h2>
+					<hr>
 					<div class="span1">&nbsp;</div>
 					  <div class="span9">
 					    <p>
@@ -249,11 +246,11 @@
 			</nav>
 	
 			<div class="logo">
-				<a href="http://www.itemis.de/"><img src="http://www.yakindu.com/resources/img/itemis_logo.png" alt="itemis" /></a>
+				<a href="http://www.itemis.de/"><img src="images/itemis_logo.png" alt="itemis" /></a>
 			</div>
 			<p>Copyright &copy; 2012&ndash;2014 <a href="http://www.itemis.de/">itemis AG</a>. Alle Rechte vorbehalten.</p>
 			<div class="powered">
-				Powered by: <a href="http://www.itemis.de/itemis-ag/services-und-loesungen/language=de/27261/eclipse-modeling"><img class="img-eclipse" src="http://www.yakindu.com/resources/img/eclipse_logo.jpg" alt="eclipse" /></a><a href="http://www.eclipse.org/Xtext/"><img src="http://www.yakindu.com/resources/img/xtext_logo.png" alt="xtext" /></a>
+				Powered by: <a href="http://www.itemis.de/itemis-ag/services-und-loesungen/language=de/27261/eclipse-modeling"><img class="img-eclipse" src="images/eclipse_logo.jpg" alt="eclipse" /></a><a href="http://www.eclipse.org/Xtext/"><img src="images/xtext_logo.png" alt="xtext" /></a>
 			</div>
 		</div>
 	</footer>
